--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,15 @@ img {
   display: block;
   max-width: 100%;
 }
+
+button[data-start] {
+width: 100px;
+height: 50px;
+font-size: 20px; 
+}
+
+button[data-stop] {
+width: 100px;
+height: 50px;
+font-size: 20px;
+}
